Performance improvements. Cleanup.